@@ -1,5 +1,8 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2006-10-01 patrick  Introduced vpr::DeadlockException and put it to use in
+                    vpr::Mutex and vpr::Semaphore.
+                    NEW VERSION: 1.1.32
 2006-10-01 patrick  Removed the use of vpr::ReturnStatus in vpr::Thread.
                     Note that the spawning form of the vpr::Thread constructor
                     now throws an exception if the thread does not start.
